2012-09-21  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/include/yarp/os/impl/ACESemaphoreImpl.h
	* src/libYARP_OS/include/yarp/os/impl/MachSemaphoreImpl.h
	* src/libYARP_OS/include/yarp/os/impl/POSIXSemaphoreImpl.h
	* src/libYARP_OS/src/Semaphore.cpp: added Semaphore::waitWithTimeout
	method [thanks Alberto Cardellino] - Mach implementation not yet
	validated

	* src/libYARP_OS/harness/SemaphoreTest.cpp: Check operation
	of Semaphore::waitWithTimeout

2012-08-23  Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/RunReadWrite.cpp
	Semaphore deadlock on close resolved.

2012-09-19  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/doc/yarp_swig.dox: consolidate documentation about building
	swig bindings

2012-09-11  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Property.cpp: handle nested property
	values in command line.

	* src/libYARP_OS/harness/PropertyTest.cpp: test for command
	line nesting of property values - new feature:
	  ... --x::y value ... will set y to value in group x
	Handy for overriding values in config files with nesting.

2012-09-05  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* bindings/yarp.i: applied patch from Marek - makes Vector a
	genuine list in python, adds various controlboard interface 
	convenience functions [thanks Marek Rucinski]

	* example/swig: move this to $YARP_ROOT/bindings, people are tired
	of the "temporary" location :-).  Left behind a CMakeLists.txt
	that points to new location and warns of deprecation.

2012-08-29 Lorenzo Natale <lorenzo.natale@iit.it>
    * conf/template/YARPConfig.cmake.in
    * conf/YarpVersion.cmake

   Renamed YARP_SVN_REVISION to YARP_VERSION_TWEAK, now manually updated.
    
2012-08-23  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/idls/thrift/src/t_yarp_generator.cc: make oneway functions
	served using thrift compatible with "yarp rpc" 
	[thanks Elena Ceseracciu]

2012-08-23  Alessandro Scalzo <alessandro.scalzo@iit.it>